@startuml
title Insights Command Class View

class Parser {
  + parse(input: String): ParsedCommand
}

class CG2StocksTracker {
  + run()
}

class PortfolioBook {
  + getActivePortfolio(): Portfolio
}

class Portfolio {
  + getHoldings(): List<Holding>
  + getTotalUnrealizedPnl(): double
}

class Ui {
  + showInsightsTable(portfolio: Portfolio, filterType: AssetType, topN: Integer, showChart: boolean)
}

class InsightsOptions {
  + filterType: AssetType
  + topN: Integer
  + showChart: boolean
}

Parser ..> ParsedCommand
CG2StocksTracker ..> InsightsOptions : parseInsightsOptions(...)
CG2StocksTracker ..> ParsedCommand : listTarget()
CG2StocksTracker ..> PortfolioBook : getActivePortfolio()
CG2StocksTracker ..> Ui : showInsightsTable(portfolio, filterType, topN, showChart)
Ui ..> Portfolio
@enduml
